<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RouseTipCalc" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/friendlyCheckBox"
        android:layout_centerVertical="true"
        android:text="@string/available_text_view" />

    <TextView
        android:id="@+id/timeWaitingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/problemsSpinner"
        android:text="@string/time_waiting_text_view" />

    <RadioGroup
        android:id="@+id/availableRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/problemsSpinner"
        android:orientation="horizontal" >
 

        <RadioButton
            android:id="@+id/availableGoodRadio"
        	android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
        	android:checked="true"
        	android:text="@string/available_good_radiobutton" />

    	<RadioButton
        	android:id="@+id/availableBadRadio"
       		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/available_bad_radiobutton" />

    	<RadioButton
        	android:id="@+id/availableOKRadio"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/available_ok_radiobutton" />
	</RadioGroup>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeWaiting"
        android:layout_toRightOf="@+id/timeWaitingText"
        android:gravity="center"
        android:text="@string/reset_chronometer_button" />

    <TextView
        android:id="@+id/BilltextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startButton"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:text="@string/bill_text_view" />

    <EditText
        android:id="@+id/BilleditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/BilltextView"
        android:layout_toRightOf="@+id/BilltextView"
        android:ems="5"
        android:inputType="number|numberDecimal"
        android:text="@string/bill_edit_view" />

    <CheckBox
        android:id="@+id/friendlyCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/problemsSpinner"
        android:layout_marginBottom="14dp"
        android:text="@string/intro_friendly_text_view" />

    <CheckBox
        android:id="@+id/opinionsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/friendlyCheckBox"
        android:layout_alignBottom="@+id/friendlyCheckBox"
        android:layout_toRightOf="@+id/friendlyCheckBox"
        android:text="@string/intro_opinions_text_view" />

    <CheckBox
        android:id="@+id/specialCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/opinionsCheckBox"
        android:layout_alignBottom="@+id/opinionsCheckBox"
        android:layout_toRightOf="@+id/opinionsCheckBox"
        android:text="@string/intro_specials_text_view" />

    <EditText
        android:id="@+id/TipEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TipChange"
        android:layout_alignRight="@+id/finalBillEditText"
        android:ems="4"
        android:inputType="numberDecimal"
        android:text="@string/tip_edit_view" />

    <TextView
        android:id="@+id/TipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TipEditText"
        android:layout_alignLeft="@+id/resetButton"
        android:text="@string/tip_text_view" />

    <TextView
        android:id="@+id/TipChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BilltextView"
        android:layout_below="@+id/BilltextView"
        android:layout_marginTop="16dp"
        android:text="@string/changeTip" />

    <Spinner
        android:id="@+id/problemsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:entries="@array/problem_solving" />

    <Chronometer
        android:id="@+id/timeWaiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/resetButton"
        android:layout_alignRight="@+id/resetButton"
        android:layout_below="@+id/problemsSpinner"
        android:text="@string/chrono" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pauseButton"
        android:layout_alignBottom="@+id/pauseButton"
        android:layout_alignRight="@+id/textView2"
        android:text="@string/start_chronometer_button" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/resetButton"
        android:layout_alignBottom="@+id/resetButton"
        android:layout_alignRight="@+id/timeWaitingText"
        android:text="@string/pause_chronometer_button" />

    <SeekBar
        android:id="@+id/ChangeTipText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/finalBillEditText"
        android:layout_alignRight="@+id/BilleditText"
        android:progress="15" />

    <EditText
        android:id="@+id/finalBillEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/FinalBill"
        android:layout_below="@+id/TipChange"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/final_edit_view" />

    <TextView
        android:id="@+id/FinalBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TipChange"
        android:layout_alignBottom="@+id/TipChange"
        android:layout_alignLeft="@+id/TipTextView"
        android:text="@string/final_text_view" />

    <TextView
        android:id="@+id/textView_Intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/friendlyCheckBox"
        android:layout_alignLeft="@+id/TipChange"
        android:text="@string/intro_text_view" />
	
</RelativeLayout>